tests/invalid/const_initialized_with_var.lang
var hello: i32 = 32;

proc main() void {
    const a: i32 = hello;
}
